--- a/shared/latex/python/data-science/pd/join.tex
+++ b/shared/latex/python/data-science/pd/join.tex
@@ -1,15 +1,63 @@
-\begin{frame}{Les axes}
-  \mintedcustomcode{python/data-science/pandas/groupby}{pycon}
+
+\begin{frame}{Les méthodes}
+  \begin{description}
+    \item[concat()] joint des \texttt{pd.DataFrame} en suivant les axes
+    \item[merge()]  joint des \texttt{pd.DataFrame} suivant des indices ou colonnes communes
+    \item[join()]   for combining data on a key column or an index
+  \end{description}
 \end{frame}
 
-\begin{frame}{Concaténation}
-  
+\begin{frame}{pd.Series}
+  \mintedcustomcode{python/data-science/pandas/concat-series}{pycon}
 \end{frame}
 
-\begin{frame}{Utilisation de plusieur clés}
-  
+\begin{frame}{pd.Series}
+  \mintedcustomcode{python/data-science/pandas/concat-series2}{pycon}
 \end{frame}
 
-\begin{frame}{Utilisation des indices}
-  
+\begin{frame}{pd.DataFrame}
+  \mintedcustomcode{python/data-science/pandas/concat-dataframe}{pycon}
+\end{frame}
+
+\begin{frame}{pd.DataFrame}
+  \texttt{NaN} aux intersections nulles de données hétérogènes\\
+  Par défaut, \texttt{NaN} aux intersections nulles de données hétérogènes\\
+  \mintedcustomcode{python/data-science/pandas/concat-dataframe2}{pycon}
+\end{frame}
+
+\begin{frame}{pd.DataFrame}
+  \mintedcustomcode{python/data-science/pandas/concat-dataframe3}{pycon}
+\end{frame}
+
+\begin{frame}{pd.DataFrame}
+  \mintedcustomcode{python/data-science/pandas/concat-dataframe4}{pycon}
+\end{frame}
+
+
+\begin{frame}{Merge}
+  \V{"img/merge-left-right-inner-outer" | image("th", 0.7)}
+\end{frame}
+
+\begin{frame}{Merge}
+  \mintedcustomcode{python/data-science/pandas/merge}{pycon}
+\end{frame}
+
+\begin{frame}{Merge}
+  \mintedcustomcode{python/data-science/pandas/merge2}{pycon}
+\end{frame}
+
+\begin{frame}{Merge}
+  \mintedcustomcode{python/data-science/pandas/merge3}{pycon}
+\end{frame}
+
+\begin{frame}{Merge}
+  \mintedcustomcode{python/data-science/pandas/merge4}{pycon}
+\end{frame}
+
+\begin{frame}{Merge}
+  \mintedcustomcode{python/data-science/pandas/merge5}{pycon}
+\end{frame}
+
+\begin{frame}{Merge}
+  \mintedcustomcode{python/data-science/pandas/merge6}{pycon}
 \end{frame}
