Some slight edits on global pandas yml and structure and multi-index
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/python/data-science/pd/multi-index.tex
+++ b/shared/latex/python/data-science/pd/multi-index.tex
@@ -1,6 +1,6 @@
-\begin{frame}{MultiIndex}
+\begin{frame}{\texttt{MultiIndex}}
     On pourrait très bien utiliser des tuples python pour indexer nos échantillons.
-    \mintedcustomcode{python/data-science/pandas/tuples}{pycon}
+    \mintedcustomcode{python/data-science/pandas/multi-index-tuples}{pycon}
 \end{frame}
 
 \begin{frame}{Mauvais exemple}
@@ -8,18 +8,18 @@
     \mintedcustomcode{python/data-science/pandas/multi-index-bytuple}{pycon}
 \end{frame}
    
-\begin{frame}{À partir de \texttt{Tuples}}
+\begin{frame}{À partir de n-uplets}
     \mintedcustomcode{python/data-science/pandas/multi-index-from-tuple}{pycon}
 \end{frame}
 
-\begin{frame}{À partir d'\texttt{Arrays}}
+\begin{frame}{À partir de tableaux}
     \mintedcustomcode{python/data-science/pandas/multi-index-from-arrays}{pycon}
 \end{frame}
 
-\begin{frame}{À partir d'un produit d'\texttt{Arrays}}
+\begin{frame}{À partir d'un produit de tableaux}
     \mintedcustomcode{python/data-science/pandas/multi-index-from-product}{pycon}
 \end{frame}
 
-\begin{frame}{À partir de \texttt{DataFrame}}
+\begin{frame}{À partir d'une \texttt{DataFrame}}
   \mintedcustomcode{python/data-science/pandas/multi-index-from-df}{pycon}
 \end{frame}
