--- a/shared/latex/python/data-science/pd/tp-pandas.tex
+++ b/shared/latex/python/data-science/pd/tp-pandas.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1GQWNAGEQJk7q_zPFgeaCR-5-RfSh1HOb\#forceEdit=true&sandboxMode=true}{TP Pandas sur les données titanic}
+  \bluelink{https://colab.research.google.com/drive/1GQWNAGEQJk7q_zPFgeaCR-5-RfSh1HOb\#forceEdit=true&sandboxMode=true}{Instructions --- Données Titanic}
   
-  \bluelink{https://colab.research.google.com/drive/1Jyt0sQMqiEZLmFdFcRWG1skdg5HNrYIB\#forceEdit=true&sandboxMode=true}{TP Pandas Time Series}
+  \bluelink{https://colab.research.google.com/drive/1Jyt0sQMqiEZLmFdFcRWG1skdg5HNrYIB\#forceEdit=true&sandboxMode=true}{Instructions --- Séries temporelles}
 \end{frame}
