--- a/shared/latex/python/data-science/pd/tp-pivot.tex
+++ b/shared/latex/python/data-science/pd/tp-pivot.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/10f2w_q8rRPXjth-uqp2vLzxyE4NACO7j\#forceEdit=true&sandboxMode=true}{TP Pandas -- Tables pivot et croisées}
+  \bluelink{https://colab.research.google.com/drive/10f2w_q8rRPXjth-uqp2vLzxyE4NACO7j\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
