--- a/shared/latex/python/data-science/pd/tp-join.tex
+++ b/shared/latex/python/data-science/pd/tp-join.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/1vs6Y0c3SrTBmS-2J40aTnNttOJtdhlwL\#forceEdit=true&sandboxMode=true}{TP Pandas -- Jointures}
+  \bluelink{https://colab.research.google.com/drive/1vs6Y0c3SrTBmS-2J40aTnNttOJtdhlwL\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
