--- a/shared/latex/python/data-science/pd/tp-optimization.tex
+++ b/shared/latex/python/data-science/pd/tp-optimization.tex
@@ -1,3 +1,3 @@
 \begin{frame}{Travaux pratiques}
-  \bluelink{https://colab.research.google.com/drive/10hskqfWaJC9Syl7wU7zyVcybNuAIUDe_\#forceEdit=true&sandboxMode=true}{TP Pandas -- Optimisations}
+  \bluelink{https://colab.research.google.com/drive/10hskqfWaJC9Syl7wU7zyVcybNuAIUDe_\#forceEdit=true&sandboxMode=true}{Instructions}
 \end{frame}
