python/data-science/pd/pivot-table maj

--- a/shared/latex/python/data-science/pd/pivot-table.tex
+++ b/shared/latex/python/data-science/pd/pivot-table.tex
@@ -1,11 +1,37 @@
-\begin{frame}{tables pivots}
-  \mintedcustomcode{python/data-science/pandas/groupby}{pycon}
+\begin{frame}{Pivots}
+  \mintedcustomcode{python/data-science/pandas/pivot}{pycon}
 \end{frame}
 
-\begin{frame}{Matrice de contingence}
-  
+\begin{frame}{Pivots}
+  \mintedcustomcode{python/data-science/pandas/pivot2}{pycon}
+\end{frame}
+
+\begin{frame}{Pivots}
+  Pas de couple index-colonne identique !
+  \mintedcustomcode{python/data-science/pandas/pivot5}{pycon}
+\end{frame}
+
+\begin{frame}{Pivots}
+  \mintedcustomcode{python/data-science/pandas/pivot3}{pycon}
+\end{frame}
+
+\begin{frame}{Pivots}
+  \mintedcustomcode{python/data-science/pandas/pivot4}{pycon}
+\end{frame}
+
+
+\begin{frame}{tables pivots}
+  \mintedcustomcode{python/data-science/pandas/pivot-table}{pycon}
+\end{frame}
+
+\begin{frame}{tables pivots}
+  \mintedcustomcode{python/data-science/pandas/pivot-table2}{pycon}
+\end{frame}
+
+\begin{frame}{tables pivots}
+  \mintedcustomcode{python/data-science/pandas/pivot-table3}{pycon}
 \end{frame}
 
 \begin{frame}{Tableaux croisés}
-  
+  \mintedcustomcode{python/data-science/pandas/cross-table}{pycon}
 \end{frame}
