--- a/shared/latex/python/data-science/pd/groupby.tex
+++ b/shared/latex/python/data-science/pd/groupby.tex
@@ -21,25 +21,27 @@
   \mintedcustomcode{python/data-science/pandas/groupby-function}{pycon}
 \end{frame}
 
-\begin{frame}{Indiçage simple sur plusieurs critères}
+\begin{frame}{Indiçage simple et plusieurs critères}
   \mintedcustomcode{python/data-science/pandas/groupby-multi-criteria}{pycon}
 \end{frame}
 
-\begin{frame}{Indiçage Hiérarchique}
+\begin{frame}{Indiçage hiérarchique}
   \mintedcustomcode{python/data-science/pandas/groupby-multi-index}{pycon}
 \end{frame}
 
-\begin{frame}{Indiçage Hiérarchique}
-  Utilisation des deux variables catégolrielles comme index de nos échantillons.\\
+\begin{frame}{Indiçage hiérarchique}
+  Utilisation des deux variables catégorielles comme index de nos échantillons.
+
   \mintedcustomcode{python/data-science/pandas/groupby-multi-index2}{pycon}
 \end{frame}
 
-\begin{frame}{Indiçage Hiérarchique}
-  Utilisation du mot clé \texttt{level} à la place de \texttt{by} (mot clé correspondant au premier argument).\\
+\begin{frame}{Indiçage hiérarchique}
+  Utilisation du mot clé \texttt{level} à la place de \texttt{by} (mot clé correspondant au premier argument).
+
   \mintedcustomcode{python/data-science/pandas/groupby-multi-index3}{pycon}
 \end{frame}
 
-\begin{frame}{Indiçage Hiérarchique}
+\begin{frame}{Indiçage hiérarchique}
   \mintedcustomcode{python/data-science/pandas/groupby-multi-index4}{pycon}
 \end{frame}
 
