orsys/pnd fix feat. mog

--- a/shared/latex/python/data-science/pd/join.tex
+++ b/shared/latex/python/data-science/pd/join.tex
@@ -2,8 +2,8 @@
 \begin{frame}{Les méthodes}
   \begin{description}
     \item[concat()] joint des \texttt{pd.DataFrame} en suivant les axes
+    \item[join()]   joint des \texttt{pd.DataFrame} suivant un indice ou colonne commune
     \item[merge()]  joint des \texttt{pd.DataFrame} suivant des indices ou colonnes communes
-    \item[join()]   for combining data on a key column or an index
   \end{description}
 \end{frame}
 
@@ -20,7 +20,6 @@
 \end{frame}
 
 \begin{frame}{pd.DataFrame}
-  \texttt{NaN} aux intersections nulles de données hétérogènes\\
   Par défaut, \texttt{NaN} aux intersections nulles de données hétérogènes\\
   \mintedcustomcode{python/data-science/pandas/concat-dataframe2}{pycon}
 \end{frame}
