--- a/shared/latex/python/data-science/pd/join.tex
+++ b/shared/latex/python/data-science/pd/join.tex
@@ -1,9 +1,9 @@
 
 \begin{frame}{Les méthodes}
   \begin{description}
-    \item[concat()] joint des \texttt{pd.DataFrame} en suivant les axes
-    \item[join()]   joint des \texttt{pd.DataFrame} suivant un indice ou colonne commune
-    \item[merge()]  joint des \texttt{pd.DataFrame} suivant des indices ou colonnes communes
+    \item[concat] joint des \texttt{pd.DataFrame} en suivant les axes
+    \item[merge]  joint des \texttt{pd.DataFrame} suivant des indices ou colonnes communes
+    \item[join]   joint des \texttt{pd.DataFrame} suivant un indice ou colonne commune (un binding de \texttt{merge})
   \end{description}
 \end{frame}
 
