--- a/shared/latex/python/data-science/pd/pandas.tex
+++ b/shared/latex/python/data-science/pd/pandas.tex
@@ -85,7 +85,7 @@
 \begin{frame}{Affichage}
   \mintedcustomcode{python/data-science/pandas/display}{pycon}
 
-  On peut aussi juste utiliser \texttt{print(df)} qui combine \texttt{df.head()} \& \texttt{df.tail()}.
+  On peut aussi juste utiliser \texttt{print(df)} qui combine \texttt{df.head} \& \texttt{df.tail}.
 \end{frame}
 
 \begin{frame}{Description ⋅ Généralités}
@@ -95,13 +95,13 @@
 \begin{frame}{Description ⋅ Caractéristiques numériques}
   \mintedcustomcode{python/data-science/pandas/description-numerical}{pycon}
 
-  Si il y a trop de colonnes pour que la sortie soit lisible, utiliser \texttt{df.describe().transpose()}.
+  Si il y a trop de colonnes pour que la sortie soit lisible, utiliser \texttt{df.describe.transpose}.
 \end{frame}
 
 \begin{frame}{Description ⋅ Ensemble de valeurs et comptage}
-  Il est possible de récupérer l'ensemble des valeurs différentes d'une série avec \texttt{unique()}.
+  Il est possible de récupérer l'ensemble des valeurs différentes d'une série avec \texttt{unique}.
   
-  Ou récupérer un comptage de chaque valeur avec \texttt{value\_counts()}.
+  Ou récupérer un comptage de chaque valeur avec \texttt{value\_counts}.
   \mintedcustomcode{python/data-science/pandas/value-counts}{pycon}
 \end{frame}
 
