Fix typo ImageNet 21k
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/nn/cnn/data.tex
+++ b/shared/latex/nn/cnn/data.tex
@@ -21,7 +21,7 @@
 \begin{frame}{ImageNet 21k}
   Images annotés par synset de wordnet :
   \begin{itemize}
-    \item 21 classes
+    \item 21k classes
     \item 14M images
   \end{itemize}
   \V{"img/imagenet" | image("th", 0.5)}
