Some small tweaks to THO
Signed-off-by: m09 <142691+m09@users.noreply.github.com>

--- a/shared/latex/programming/hardware.tex
+++ b/shared/latex/programming/hardware.tex
@@ -6,7 +6,7 @@
         \item[Cache] Mémoire interne du processeur
         \item[RAM] Mémoire vive qui sera utilisée par les programmes
         \item[Disque] Mémoire de stockage
-        \item[autres supports] disquette, clé usb, etc ...
+        \item[Autres supports] disquette, clé usb, …
     \end{description}
 \end{frame}
 
@@ -17,14 +17,14 @@
         \begin{itemize}
             \item déplacer la tête de lecture
             \item lire/écrire
-            \item ...
+            \item …
         \end{itemize}
         \item Opération sur des \textbf{variables} stockées en \textbf{Cache} :
         \begin{itemize}
-            \item ET
-            \item OU
-            \item XOR
-            \item ...
+            \item logiques
+            \item arithmétiques
+            \item calculs sur flottants
+            \item …
         \end{itemize}
     \end{itemize}
     Ces opérations sont utilisées dans un ordre précis, décrit par un programme.
