--- a/shared/latex/programming/library.tex
+++ b/shared/latex/programming/library.tex
@@ -1,5 +1,5 @@
 \begin{frame}{Définition}
-    Ensemble de code source apportant des définitions d'objets et de fonctionnalitées utilisables dans le respect de leurs licences respectives.
+    Ensemble de code source apportant des définitions d'objets et de fonctionnalités utilisables dans le respect de leurs licences respectives.
     \mintedpycode{python/parallelism/pool-creation}
 \end{frame}
 
@@ -13,4 +13,3 @@
     \end{itemize}
     À chaque langage, son propre écosystème de bibliothèques.
 \end{frame}
-
