--- a/shared/latex/programming/program.tex
+++ b/shared/latex/programming/program.tex
@@ -1,7 +1,7 @@
 \begin{frame}{Définition}
     Ensemble d'instructions qui doivent être executées sur la mémoire en suivant un algorithme. \\
     \newline
-    Les premiers programmes étaient constitués de composants soudés pour executer les instructions de déplacement de \textbf{la tete de lecture} sur \textbf{la bande de mémoire}
+    Les premiers programmes étaient constitués de composants soudés pour executer les instructions de déplacement de \textbf{la tête de lecture} sur \textbf{la bande de mémoire}
 \end{frame}
 
 \begin{frame}{Les cartes perforées}
@@ -11,14 +11,9 @@
 \end{frame}
 
 \begin{frame}{Processeur (CPU)}
-    \V{"img/cpu-schema" | image("th", 0.7)}
+    \V{"img/cpu-schema" | image("tw")}
 \end{frame}
 
 \begin{frame}{Un code source}
-    \textbf{Exemple :}
-    \mintedpycode{python/basics/programmation/program-exemple}
+    \mintedpycode{programming/program-exemple}
 \end{frame}
-
-
-
-
