--- a/stys/formation.sty
+++ b/stys/formation.sty
@@ -29,6 +29,7 @@
 \usepackage{colortbl}
 \usepackage{lcg}
 \usepackage{dirtree}
+\usepackage[french]{algorithm2e}
 \usepackage[french]{babel}
 
 \hypersetup{bookmarksdepth=4}
