--- a/shared/latex/programming/algorithm.tex
+++ b/shared/latex/programming/algorithm.tex
@@ -10,24 +10,23 @@
         \item Ses \textbf{sorties} (sous formes de \textbf{variables})
         \item Les étapes nécéssaires pour transformer les entrées en sorties
     \end{itemize}
-    On peut alors en déduire son rendement
 \end{frame}
 
 \begin{frame}{Quelques instructions en français}
     
-    \begin{description}[<+->]
-        \item [\blue{ACCES}] $X[5]\;\;\;\;\;$ \green{"On accède au 5ème élément de la liste $X$"}
+    \begin{description}
+        \item [\blue{Accès}] $X[5]\;\;\;\;\;$ \green{"On accède au 5ème élément de la liste $X$"}
         \item []
-        \item [\blue{AFFECTATION}] $Y \leftarrow X\;$  \green{"On affecte à $Y$ la valeur contenue dans $X$"}
+        \item [\blue{Assignation}] $Y \leftarrow X\;$  \green{"On assigne à $Y$ la valeur contenue dans $X$"}
         \item []
-        \item [\blue{TEST}] 
+        \item [\blue{Test}] 
         \begin{description}
             \item [SI] $X == Y$
             \item [ALORS] $X \leftarrow X + 10$
             \item [SINON] $Y \leftarrow X - 12$
         \end{description}
         \item []
-        \item [\blue{BOUCLE}] 
+        \item [\blue{Boucle}] 
         \begin{description}
             \item [TANT QUE] $X > Y$
             \item [ALORS] $X \leftarrow X - 1$
@@ -38,22 +37,17 @@
 \end{frame}
 
 \begin{frame}{Example d'algorithme en français}
-    \begin{description}
-        \item [Entrée] X : Une liste de 10 nombres
-        \item [Sorties] Y : Le nombre maximum dans la liste 
-        \item [instructions]
-        \begin{itemize}
-            \item $\text{IndexMax} \leftarrow 9$
-            \item $Y \leftarrow X[0]$ 
-            \item TANT QUE $\text{Index}$ < $\text{IndexMax}$
-            \begin{itemize}
-                \item SI $Y < X[\text{Index}]$ ALORS $Y \leftarrow X[\text{Index}]$ 
-                \item $\text{Index} \leftarrow \text{Index} + 1$
-            \end{itemize}
-            \item RENVOYER Y
-        \end{itemize}
-    \end{description}
+  \begin{description}
+    \item [Entrées] \texttt{tableau} : Un tableau de nombres non vide
+    \item [Sorties] Le nombre maximum du tableau
+    \item [Instructions]
+      \texttt{index} $\leftarrow$ 1\\
+      \texttt{index\_max} $\leftarrow$ \texttt{Taille}(\texttt{tableau})\\
+      \texttt{maximum} $\leftarrow$ \texttt{tableau}[1]\\
+      \textbf{TANT QUE} \texttt{index} $\leq$ \texttt{index\_max}\\
+      $\;\;$\textbf{SI} \texttt{maximum} $<$ \texttt{tableau}[\texttt{index}]\\
+      $\;\;$\textbf{ALORS} \texttt{maximum} $\leftarrow$ \texttt{tableau}[\texttt{index}]\\
+      $\;\;$\texttt{index} $\leftarrow$ \texttt{index} + 1\\
+      \textbf{RENVOYER} \texttt{maximum}
+  \end{description}
 \end{frame}
-
-
-
