--- a/shared/latex/python/intro/intro.tex
+++ b/shared/latex/python/intro/intro.tex
@@ -24,10 +24,10 @@
     Atouts
     \begin{itemize}
     \item Stable
-    \item multi-plateforme
+    \item Multi-plateforme
     \item Facile à apprendre
     \item Grande communauté (le plus utilisé depuis 2019)
-    \item un besoin, un module
+    \item « Batteries included » : un besoin, un module
     \end{itemize}
   \end{minipage}\hfill
   \begin{minipage}[l]{0.49\linewidth}
