fix orsys/pnd tp

--- a/shared/latex/python/data-science/pd/pivot-table.tex
+++ b/shared/latex/python/data-science/pd/pivot-table.tex
@@ -1,3 +1,8 @@
+\begin{frame}{tables pivots}
+  Les tables pivots permettent de synthétiser des informations contenues dans notre \texttt{pd.DataFrame} \\
+  Ex: une valeure moyenne par catégories, une sorte de groupby avec un aggrégateur.
+\end{frame}
+
 \begin{frame}{Pivots}
   \mintedcustomcode{python/data-science/pandas/pivot}{pycon}
 \end{frame}
@@ -32,6 +37,8 @@
   \mintedcustomcode{python/data-science/pandas/pivot-table3}{pycon}
 \end{frame}
 
-\begin{frame}{Tableaux croisés}
+\begin{frame}{Matrices de contingence}
+  Tables qui résument l'information en comptant le nombre d'occurence de chaque clé
+  du premier argument en regroupant les résultats suivant les clés du deuxième argument. \\
   \mintedcustomcode{python/data-science/pandas/cross-table}{pycon}
 \end{frame}
